--- a/Miniso/Venetian.html
+++ b/Miniso/Venetian.html
@@ -2288,7 +2288,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Encuentra en nuestras tiendas las mejores ofertas, para complacer y sorprender a quienes amas: juguetes, accesorios, ropa, tecnología y ¡mucho más!</div>
+<div id="i12">Encuentra en nuestras tiendas las mejores ofertas, para complacer y complacer a quienes amas: juguetes, accesorios, ropa, tecnología y ¡mucho más!</div>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">¿Buscando qué regalar en esta Navidad?</div>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2301,6 +2301,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i5" src="https://i.imgur.com/3Xq5rL5.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/9IBLDib.png"></dataimg>
+<!--#/#--><!--#i2.i48.slice-image.html:slice-image/html-->
+<dataimg id="i48" src="https://i.imgur.com/SuNjXuL.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i26.button.html:button/html-->
@@ -2368,6 +2370,8 @@ document.addEventListener('DOMContentLoaded', function() {
 /*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
+
+/*#/#*//*#i2.i48.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
 bmShow('i26');
@@ -2470,7 +2474,7 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Encuentra en nuestras tiendas las mejores ofertas, para complacer y sorprender a quienes amas: juguetes, accesorios, ropa, tecnología y ¡mucho más!; customName: false;
+name: Encuentra en nuestras tiendas las mejores ofertas, para complacer y complacer a quienes amas: juguetes, accesorios, ropa, tecnología y ¡mucho más!; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
@@ -2491,6 +2495,8 @@ name: x0ZIxCW.png; fileId: ; sourceTypeId: externalUrl;
 name: 3Xq5rL5.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: 9IBLDib.png; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i48.slice-image.meta:slice-image/meta*/
+name: SuNjXuL.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i26.button.meta:button/meta*/
