--- a/Miniso/Cube.html
+++ b/Miniso/Cube.html
@@ -775,13 +775,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(258px, 201px) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 22px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
-#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 251px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(-16px, 79px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-16px, 79px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-16px, 79px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-16px, 79px) rotate(0deg);
+#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 224px; height: 52px;
+        -ms-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -842,81 +842,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
-/*#/#*//*#i222.i227.image.css:image/base/css*/
-#i227 { opacity: 1; }
-/*#/#*//*#i227.i228.positioning.css:positioning/base/css.1*/
-#i227 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i222.i229.text.css:text/base/css*/
-#i229 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
-/*#/#*//*#i229.i230.positioning.css:positioning/base/css.1*/
-#i229 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 251px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(4px, 79px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(4px, 79px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(4px, 79px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(4px, 79px) rotate(0deg);
-}
-/*#/#*//*#i222.i247.image.css:image/base/css*/
-#i247 { opacity: 1; }
-/*#/#*//*#i247.i248.positioning.css:positioning/base/css.2*/
-#i247 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 38px; height: 42px;
-        -ms-transform: translate(0, 0) translate(258px, 201px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(258px, 201px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(258px, 201px) rotate(0deg);
-        transform: translate(0, 0) translate(258px, 201px) rotate(0deg);
-}
-/*#/#*//*#i222.i223.shape.css:shape/base/css*/
-#i223 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i224.i225.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i223 { cursor: pointer; }
-/*#/#*//*#i223.i226.positioning.css:positioning/base/css.1*/
-#i223 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i222.i231.image.css:image/base/css*/
-#i231 { opacity: 1; }
-/*#/#*//*#i231.i232.positioning.css:positioning/base/css.2*/
-#i231 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 168px; height: 47px;
-        -ms-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-}
-/*#/#*//*#i222.i235.image.css:image/base/css*/
-#i235 { opacity: 1; }
-/*#/#*//*#i235.i236.positioning.css:positioning/base/css.2*/
-#i235 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(5px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(5px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(5px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(5px, 223px) rotate(0deg);
-}
-/*#/#*//*#i222.i239.image.css:image/base/css*/
-#i239 { opacity: 1; }
-/*#/#*//*#i239.i240.positioning.css:positioning/base/css.2*/
-#i239 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(35px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(35px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(35px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(35px, 223px) rotate(0deg);
-}
-/*#/#*//*#i222.i243.image.css:image/base/css*/
-#i243 { opacity: 1; }
-/*#/#*//*#i243.i244.positioning.css:positioning/base/css.2*/
-#i243 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
-}
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
 #i2 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
@@ -973,9 +898,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i196.image.html:image/html-->
 <img id="i196" src="https://i.imgur.com/Doq2CQA.png"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Regalos, juguetes, accesorios, adornos, moda, y ¡mucho más!: Sorprende a los tuyos en esta Navidad.</div>
+<div id="i34">¿Sabes lo que es MINISO Life?</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/hlj86Uu.gif"/>
+<img id="i60" src="https://i.imgur.com/2x7gdUU.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i192.image.html:image/html-->
@@ -986,26 +911,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i214" src="https://i.imgur.com/JIkrNB5.png"/>
 <!--#/#--><!--#i6.i218.image.html:image/html-->
 <img id="i218" src="https://i.imgur.com/WvdmJ4O.png"/>
-<!--#/#-->
-</div>
-<!--#/#--><!--#i2.i222.cube-panel.html:cube-panel/html.1-->
-<div id="i222" class="adf-Panel ">
-    <!--#i222.i227.image.html:image/html-->
-<img id="i227" src="https://i.imgur.com/2x7gdUU.png"/>
-<!--#/#--><!--#i222.i229.text.html:text/html-->
-<div id="i229">¿Sabes lo que es MINISO Life?</div>
-<!--#/#--><!--#i222.i247.image.html:image/html-->
-<img id="i247" src="https://i.imgur.com/Doq2CQA.png"/>
-<!--#/#--><!--#i222.i223.shape.html:shape/html-->
-<div id="i223"></div>
-<!--#/#--><!--#i222.i231.image.html:image/html-->
-<img id="i231" src="https://i.imgur.com/keIQLNX.png"/>
-<!--#/#--><!--#i222.i235.image.html:image/html-->
-<img id="i235" src="https://i.imgur.com/MOosxdR.png"/>
-<!--#/#--><!--#i222.i239.image.html:image/html-->
-<img id="i239" src="https://i.imgur.com/JIkrNB5.png"/>
-<!--#/#--><!--#i222.i243.image.html:image/html-->
-<img id="i243" src="https://i.imgur.com/WvdmJ4O.png"/>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -1032,7 +937,7 @@ cube_i2.init({
     direction: 'horizontal',
     bannerShowDelay: 1,
     autoRotateEnabled: true,
-    autoRotateDelay: 3,
+    autoRotateDelay: 4,
     autoRotateDirection: 'rotateNext',
     defaultButtonsOnPanels: false,
     transition: 0.8
@@ -1146,11 +1051,7 @@ bmShow('i181');
 /* Name: On Click; */
 var el = document.getElementById('i181');
 
-el.addEventListener('click', function(e){
-    /*#i184.i185.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/yPCyrGgk9ep'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -1179,11 +1080,7 @@ bmShow('i192');
 /* Name: On Click; */
 var el = document.getElementById('i192');
 
-el.addEventListener('click', function(e){
-    /*#i194.i195.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://miniso.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -1242,87 +1139,6 @@ if ('click' === 'click') {
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 
-/*#/#*//*#i222.i227.image.js:image/base/js*/
-
-/*#/#*//*#i222.i247.image.js:image/base/js*/
-
-/*#/#*//*#i247.i248.positioning.js:positioning/base/js.2*/
-bmShow('i247');
-/*#/#*//*#i223.i224.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i223').addEventListener('click', function(e){
-    /*#i224.i225.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://miniso.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*//*#i222.i231.image.js:image/base/js*/
-
-/*#/#*//*#i231.i232.positioning.js:positioning/base/js.2*/
-bmShow('i231');
-/*#/#*//*#i231.i233.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i231');
-
-el.addEventListener('click', function(e){
-    /*#i233.i234.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/yPCyrGgk9ep'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i222.i235.image.js:image/base/js*/
-
-/*#/#*//*#i235.i236.positioning.js:positioning/base/js.2*/
-bmShow('i235');
-/*#/#*//*#i235.i237.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i235');
-
-el.addEventListener('click', function(e){
-    /*#i237.i238.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://miniso.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i222.i239.image.js:image/base/js*/
-
-/*#/#*//*#i239.i240.positioning.js:positioning/base/js.2*/
-bmShow('i239');
-/*#/#*//*#i239.i241.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i239');
-
-el.addEventListener('click', function(e){
-    /*#i241.i242.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://plus.google.com/share?url=https://miniso.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i222.i243.image.js:image/base/js*/
-
-/*#/#*//*#i243.i244.positioning.js:positioning/base/js.2*/
-bmShow('i243');
-/*#/#*//*#i243.i245.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i243');
-
-el.addEventListener('click', function(e){
-    /*#i245.i246.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://miniso.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -1455,46 +1271,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: WvdmJ4O.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i218.i219.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i2.i222.cube-panel.meta:cube-panel/meta.1*/
-    name: Cube Panel 4;
-/*#/#*//*#i222.i227.image.meta:image/meta*/
-name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i227.i228.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i222.i229.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i229.i230.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i222.i247.image.meta:image/meta*/
-name: Doq2CQA.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i247.i248.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i222.i223.shape.meta:shape/meta*/
-name: Link;
-/*#/#*//*#i223.i226.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i222.i231.image.meta:image/meta*/
-name: keIQLNX.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i231.i232.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i222.i235.image.meta:image/meta*/
-name: MOosxdR.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i235.i236.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i222.i239.image.meta:image/meta*/
-name: JIkrNB5.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i239.i240.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i222.i243.image.meta:image/meta*/
-name: WvdmJ4O.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i243.i244.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
