--- a/HEB nov/Cube.html
+++ b/HEB nov/Cube.html
@@ -590,7 +590,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 49px;
         -ms-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
@@ -730,11 +730,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 65px; height: 21px;
-        -ms-transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 34px; height: 34px;
+        -ms-transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
+        transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
 }
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
 #i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 306px; height: 160px;
@@ -742,6 +742,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(-3px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(-3px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(-3px, 0px) rotate(0deg);
+}
+/*#/#*//*#i5.i230.image.css:image/base/css*/
+#i230 { opacity: 1; }
+/*#/#*//*#i230.i231.positioning.css:positioning/base/css.2*/
+#i230 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 34px; height: 34px;
+        -ms-transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
+        transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -754,15 +763,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i184.image.css:image/base/css*/
-#i184 { opacity: 1; }
-/*#/#*//*#i184.i185.positioning.css:positioning/base/css.2*/
-#i184 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 65px; height: 21px;
-        -ms-transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
 }
 /*#/#*//*#i5.i190.button.css:button/base/css*/
 #i190 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(235,30,2,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(235,30,2,1); border-width: 1px; margin:-1px; border-style: solid; }
@@ -832,6 +832,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i6.i232.image.css:image/base/css*/
+#i232 { opacity: 1; }
+/*#/#*//*#i232.i233.positioning.css:positioning/base/css.2*/
+#i232 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 34px; height: 34px;
+        -ms-transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
+        transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
+}
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
 }
@@ -843,15 +852,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i6.i186.image.css:image/base/css*/
-#i186 { opacity: 1; }
-/*#/#*//*#i186.i187.positioning.css:positioning/base/css.2*/
-#i186 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 65px; height: 21px;
-        -ms-transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(229px, 223px) rotate(0deg);
 }
 /*#/#*//*#i6.i192.button.css:button/base/css*/
 #i192 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(235,30,2,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(235,30,2,1); border-width: 1px; margin:-1px; border-style: solid; }
@@ -919,7 +919,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i188.button.html:button/html-->
 <button id="i188">¡¡Ver más!!</button>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i.imgur.com/xBnTHrI.png"/>
+<img id="i181" src="https://i.imgur.com/ThJYbDQ.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i202.image.html:image/html-->
@@ -938,10 +938,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i24">Este CiberMonday, ¿quieres unos zapatos nuevos al mejor precio?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/zHrJ4J0.png"/>
+<!--#/#--><!--#i5.i230.image.html:image/html-->
+<img id="i230" src="https://i.imgur.com/ThJYbDQ.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
-<!--#/#--><!--#i5.i184.image.html:image/html-->
-<img id="i184" src="https://i.imgur.com/xBnTHrI.png"/>
 <!--#/#--><!--#i5.i190.button.html:button/html-->
 <button id="i190">¡¡Ver más!!</button>
 <!--#/#--><!--#i5.i200.image.html:image/html-->
@@ -960,10 +960,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i34">¡¡Consigue este CiberMonday los mejores perfumes!!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/YLsqSGa.png"/>
+<!--#/#--><!--#i6.i232.image.html:image/html-->
+<img id="i232" src="https://i.imgur.com/ThJYbDQ.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
-<!--#/#--><!--#i6.i186.image.html:image/html-->
-<img id="i186" src="https://i.imgur.com/xBnTHrI.png"/>
 <!--#/#--><!--#i6.i192.button.html:button/html-->
 <button id="i192">¡¡Ver más!!</button>
 <!--#/#--><!--#i6.i194.image.html:image/html-->
@@ -1082,6 +1082,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
+/*#/#*//*#i5.i230.image.js:image/base/js*/
+
+/*#/#*//*#i230.i231.positioning.js:positioning/base/js.2*/
+bmShow('i230');
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
@@ -1089,10 +1093,6 @@ document.getElementById('i95').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i5.i184.image.js:image/base/js*/
-
-/*#/#*//*#i184.i185.positioning.js:positioning/base/js.2*/
-bmShow('i184');
 /*#/#*//*#i190.i191.positioning.js:positioning/base/js.2*/
 bmShow('i190');
 /*#/#*//*#i5.i200.image.js:image/base/js*/
@@ -1151,6 +1151,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
+/*#/#*//*#i6.i232.image.js:image/base/js*/
+
+/*#/#*//*#i232.i233.positioning.js:positioning/base/js.2*/
+bmShow('i232');
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
@@ -1158,10 +1162,6 @@ document.getElementById('i99').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i6.i186.image.js:image/base/js*/
-
-/*#/#*//*#i186.i187.positioning.js:positioning/base/js.2*/
-bmShow('i186');
 /*#/#*//*#i192.i193.positioning.js:positioning/base/js.2*/
 bmShow('i192');
 /*#/#*//*#i6.i194.image.js:image/base/js*/
@@ -1264,7 +1264,7 @@ customName: false;
 /*#/#*//*#i188.i189.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i181.image.meta:image/meta*/
-name: xBnTHrI.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: ThJYbDQ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1302,15 +1302,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i230.image.meta:image/meta*/
+name: ThJYbDQ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i230.i231.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i184.image.meta:image/meta*/
-name: xBnTHrI.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i184.i185.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i190.button.meta:button/meta*/
 name: ¡¡Ver más!!;
 customName: false;
@@ -1346,15 +1346,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i232.image.meta:image/meta*/
+name: ThJYbDQ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i232.i233.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i6.i186.image.meta:image/meta*/
-name: xBnTHrI.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i186.i187.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i192.button.meta:button/meta*/
 name: ¡¡Ver más!!;
 customName: false;
