--- a/HEB nov/FadeBig.html
+++ b/HEB nov/FadeBig.html
@@ -57,18 +57,18 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/KI6e37H.png");
+            background: url("https://i.imgur.com/hkgfmHx.png");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/Lznt8mZ.png");
+            background: url("https://i.imgur.com/Lt9izxQ.png");
             background-size: cover;
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/lvndZoV.png");
+            background: url("https://i.imgur.com/o5QGXNE.png");
             background-size: cover;
             
         }
@@ -322,7 +322,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("https://www.ferrerorocher.com/es/mx/the-golden-experience");
+            window.open("https://www.heb.com.mx/");
         }
     </script>
 </head>
@@ -352,13 +352,13 @@
 <div style="bottom:0px;height: 1px;text-align:left;margin-top:20px">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:0px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.ferrerorocher.com/es/mx/the-golden-experience"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.heb.com.mx/"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/0aK4mTf.png" title="compartir en facebook" width="22" /></a>
 
-                            <a class="shared" href="https://plus.google.com/share?url=https://www.ferrerorocher.com/es/mx/the-golden-experience" target="block">
+                            <a class="shared" href="https://plus.google.com/share?url=https://www.heb.com.mx/" target="block">
                             <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/z9DD313.png" title="compartir en google+" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://www.ferrerorocher.com/es/mx/the-golden-experience" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https://www.heb.com.mx/" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/TJvynrZ.png" title="compartir en twitter" width="22" /></a>
                     </span>
                 </div>
