--- a/HEB nov/Cube.html
+++ b/HEB nov/Cube.html
@@ -935,7 +935,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Este CiberMonday, ¿quieres unos zapatos nuevos al mejor precio?</div>
+<div id="i24">Este Cyber Monday, ¿quieres unos zapatos nuevos al mejor precio?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/zHrJ4J0.png"/>
 <!--#/#--><!--#i5.i230.image.html:image/html-->
@@ -957,7 +957,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¡¡Consigue este CiberMonday los mejores perfumes!!</div>
+<div id="i34">¡¡Consigue este Cyber Monday los mejores perfumes!!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/YLsqSGa.png"/>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
