--- a/HEB nov/Venetian.html
+++ b/HEB nov/Venetian.html
@@ -2295,7 +2295,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i14.button.html:button/html-->
-<button id="i14">Cambiate a Her</button>
+<button id="i14">¡¡Ver Más!!</button>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#i32.image.html:image/html-->
@@ -2464,7 +2464,7 @@ name: vDZMCTg.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i14.button.meta:button/meta*/
-name: Cambiate a Her;
+name: ¡¡Ver Más!!;
 customName: false;
 /*#/#*//*#i14.i15.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
