--- a/HEB nov/FadeBig.html
+++ b/HEB nov/FadeBig.html
@@ -342,7 +342,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-              ¿Quieres saber quien da los mejores descuentos en Mexico para CyberMonday? 
+              ¿Quieres saber quien da los mejores descuentos en Mexico para Cyber Week? 
             </span>
             <br/>  
             
