--- a/HEB nov/Venetian.html
+++ b/HEB nov/Venetian.html
@@ -2281,7 +2281,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">¿Donde crees que están los mejores descuentos?</div>
+<div id="i7">¿Dónde crees que están los mejores descuentos?</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/ThJYbDQ.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
@@ -2295,7 +2295,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i14.button.html:button/html-->
-<button id="i14">¡¡Ver Más!!</button>
+<button id="i14">¡¡Ver más!!</button>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#i32.image.html:image/html-->
