--- a/HEB nov/Venetian.html
+++ b/HEB nov/Venetian.html
@@ -2368,7 +2368,7 @@ var el = document.getElementById('i26');
 
 el.addEventListener('click', function(e){
     /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2385,7 +2385,7 @@ var el = document.getElementById('i32');
 
 el.addEventListener('click', function(e){
     /*#i40.i41.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2402,7 +2402,7 @@ var el = document.getElementById('i34');
 
 el.addEventListener('click', function(e){
     /*#i42.i43.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2419,7 +2419,7 @@ var el = document.getElementById('i36');
 
 el.addEventListener('click', function(e){
     /*#i38.i39.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
