--- a/HEB nov/FadeBig.html
+++ b/HEB nov/FadeBig.html
@@ -322,7 +322,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("https://www.heb.com.mx/");
+            window.open("https://www.heb.com.mx/cyber-week");
         }
     </script>
 </head>
@@ -342,7 +342,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-              ¿Quieres saber quién da los mejores descuentos en México para Cyber Week? 
+              ¿Quieres saber quién da los mejores descuentos en México para Cyber Lunes? 
             </span>
             <br/>  
             
@@ -353,13 +353,13 @@
 <div style="bottom:0px;height: 1px;text-align:left;margin-top:20px">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:0px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.heb.com.mx/"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.heb.com.mx/cyber-week"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/McmW7JZ.png" title="compartir en facebook" width="22" /></a>
 
-                            <a class="shared" href="https://plus.google.com/share?url=https://www.heb.com.mx/" target="block">
+                            <a class="shared" href="https://plus.google.com/share?url=https://www.heb.com.mx/cyber-week" target="block">
                             <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/QdjZlCQ.png" title="compartir en google+" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://www.heb.com.mx/" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https://www.heb.com.mx/cyber-week" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/skp1Nct.png" title="compartir en twitter" width="22" /></a>
                     </span>
                 </div>
