--- a/HEB nov/Cube.html
+++ b/HEB nov/Cube.html
@@ -957,9 +957,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¡¡Consigue este Cyber Lunes los mejores perfumes!!</div>
+<div id="i34">¡¡Consigue este Cyber Lunes las mejores pantallas!!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/YLsqSGa.png"/>
+<img id="i60" src="https://i.imgur.com/3zp8Yoc.png"/>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
 <img id="i232" src="https://i.imgur.com/ThJYbDQ.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
